# an-analysis-of-the-crew

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindKissat.cmake
games/: example.game  problem.game  random-impossible.game  random-new.cnf  random.cnf  random.game  reorder.game
include/common/: card.h  game-util.h  game.h  parse.h  status.h  trick.h  util.h
include/common/probability/: math.h
include/common/solver/: brute-force.h  gamesolver.h  kissatsolver.h
include/strategy/: hint.h  knowledge.h  playout-limit.h  playout.h  set-operations.h  util.h
include/strategy/players/: baseplayer.h  ignorant-montecarlo.h  montecarlo.h  random.h  true-montecarlo.h  user.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  card.cpp  game-util.cpp  game.cpp  parse.cpp  trick.cpp  util.cpp
src/common/probability/: math.cpp
src/common/solver/: brute-force.cpp  gamesolver.cpp  kissatsolver.cpp
src/satisfiability/: CMakeLists.txt  main.cpp
src/strategy/: CMakeLists.txt  knowledge.cpp  main.cpp  playout-limit.cpp  playout.cpp  util.cpp
src/strategy/players/: baseplayer.cpp  ignorant-montecarlo.cpp  montecarlo.cpp  random.cpp  true-montecarlo.cpp  user.cpp
